# rp-prefapps

./: .gitignore  README  autogen.sh  configure.ac  meson.build  nb.po
data/: 10-prefapps-timesync.rules  10-rp-prefapps.rules  10-timesync.rules  Makefile.am  meson.build  prefapps.conf  pwdrpp.sh  rp-prefapps.desktop.in  rp_prefapps.desktop.in  rp_prefapps.ui
debian/: changelog  control  copyright  rp-prefapps.install  rp-prefapps.postinst
po/: POTFILES.in  en_GB.po  hy.po  it.po  ko.po  nb.po  pl.po  pt_BR.po  sk.po  zh_CN.po
src/: Makefile.am  activate.c  meson.build  rp_prefapps.c
